crates/tokf-cli/filters/cargo/nextest_test/compile_error.txt
   Compiling myapp v0.1.0 (/home/user/myapp)
error[E0308]: mismatched types
  --> src/main.rs:15:20
   |
15 |     let count: u32 = "hello";
   |                ---   ^^^^^^^ expected `u32`, found `&str`
   |                |
   |                expected due to this

error[E0425]: cannot find value `undefined_var` in this scope
  --> src/lib.rs:42:5
   |
42 |     undefined_var
   |     ^^^^^^^^^^^^^ not found in this scope

For more information about this error, try `rustc --explain E0308`.
error: could not compile `myapp` (lib) due to 2 previous errors
